# PICI-LIGGGHTS

./: README.md
docker/: Dockerfile  README.md  docker_build_push.sh  install_liggghts.sh  install_liggghts_noopengl.sh  requirements.txt
examples/PICI-LIGGGHTS/rotating_drum_JKR/: README.md  jkr_test.sim
python/: install.py  liggghts.py
src/: .gitignore  CMakeLists.txt  dump_vtk.h  finish.cpp  fix_check_timestep_sph.cpp  image.cpp  lammps.cpp  library.cpp  library.h  mesh_module_stress_servo.cpp  normal_model_hertz_wet.h  pair_gran_proxy.cpp  particleToInsert.cpp  read_restart.cpp  universe.cpp  universe.h  utils.h
src/MAKE/: Makefile.auto
